--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+
+body {
+  font-family: 'Inter', sans-serif;
 }
 
 .logo {
